added persistent header element

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             }
         })    
     </script> -->
+    <h1 id="nav">persistent header goes here</h1>
     
     <div id="content">
 	
@@ -53,7 +54,7 @@ Proident irure est mollit non ex consequat deserunt duis veniam id voluptate eli
                 itemSelector:"#content",
                 debug: false,
                 dataType: 'html',
-                maxPage: 4,
+                maxPage: 40,
                 path(index){
                     return "index" + index + ".html";
                 }
